<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.reneruck.traincheck.EditTrackerActivity">


    <RelativeLayout
        android:id="@+id/time_box"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00:00"
            android:id="@+id/input_start_time"
            android:textSize="30sp"
            android:tag=""
            android:layout_marginEnd="25sp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/to" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_to"
            android:id="@+id/to"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="00:00"
            android:id="@+id/input_end_time"
            android:textSize="30sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="25sp"
            android:layout_toEndOf="@+id/to" />

    </RelativeLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5sp"
        android:layout_marginTop="15sp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_monday"
            android:id="@+id/text_monday"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"
            android:tag="0"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_tuesday"
            android:id="@+id/text_tuesday"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"
            android:tag="1"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_wednesday"
            android:id="@+id/text_wednesday"
            android:textSize="20sp"
            android:tag="2"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_thursday"
            android:id="@+id/text_thursday"
            android:textSize="20sp"
            android:tag="3"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_friday"
            android:id="@+id/text_friday"
            android:textSize="20sp"
            android:tag="4"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_saturday"
            android:id="@+id/text_saturday"
            android:textSize="20sp"
            android:tag="5"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_sunday"
            android:id="@+id/text_sunday"
            android:textSize="20sp"
            android:tag="6"
            android:padding="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/time_box"
        android:layout_alignParentStart="true">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_primary_station"
            android:spinnerMode="dialog"
            android:layout_margin="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_direction_primary"
            android:spinnerMode="dialog"
            android:layout_margin="30sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" />

        <!--<CheckBox-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Has connection"-->
            <!--android:id="@+id/checkBox"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignEnd="@+id/select_secondary_station"-->
            <!--android:layout_marginEnd="182dp"-->
            <!--android:checked="false" />-->

        <!--<Spinner-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/select_secondary_station"-->
            <!--android:spinnerMode="dialog"-->
            <!--android:layout_margin="30sp"-->
            <!--android:layout_below="@+id/select_primary_station"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<Spinner-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/select_direction_secondary"-->
            <!--android:spinnerMode="dialog"-->
            <!--android:layout_margin="30sp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_below="@+id/select_direction_primary" />-->



    </RelativeLayout>

</RelativeLayout>
